--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 /* copa america */
-main{
-    height: auto;
-}
+
 section{
     display: flex;
     justify-content: center;
     margin-left: 20%;
     margin-right: 20%;
-    border: 1px solid grey;
+    border: 2px solid grey;
     border-radius: 10px;
     
 }
@@ -17,7 +15,7 @@ section{
 h1{
     font-size: 30px;
     color: whitesmoke ;
-    padding: 20px;
+    padding: 15px;
 }
 .link-button{
     text-decoration: none;
@@ -32,7 +30,14 @@ h1{
     height: 60%;
 }
 /* players */
+.bangladesh{
+    width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-left: 2%;
+    box-shadow: 4px 4px 4px 4px gray;
 
+}
 .players{
     display: flex;
     justify-content: center;
@@ -44,15 +49,46 @@ h1{
     width: 224px;
     height: 104px;
 }
+/* players2 */
+ .bangladesh2{
+    width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-left: 2%;
+    box-shadow: 4px 4px 4px 4px gray;
+
+}  
+.bangladesh3{
+    width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-left: 2%;
+    box-shadow: 4px 4px 4px 4px gray;
+}
+ 
 /* highlight */
+.highilight2{
+    width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-left: 2%;
+    box-shadow: 3px 3px 3px gray;
+}
 .copa img{
     padding: 20px;
     width: 60%;
     height: 60%;
 }
 h2{
-    padding: 20px;
+    padding: 15px;
 }
-.link-button{
- padding: 20px;
+
+.oo{
+    text-align: center;
+    font-size: 200%;
+    color: indigo;
+}
+.oo img{
+    width: 110px;
+    height: 100px;
 }
